# autocontext

./: .env.example  .gitignore  CLAUDE.md  CONTRIBUTING.md
.github/: CODEOWNERS  (+2 more)
mts/: README.md  pyproject.toml
mts/.claude/skills/: grid-ctf-ops  othello-ops
mts/docs/: sandbox.md
mts/skills/grid-ctf-ops/: SKILL.md  playbook.md
mts/src/mts/: __init__.py  cli.py  sdk.py  sdk_models.py
mts/tests/: test_action_filter.py  test_agent_sdk_client.py  test_agent_sdk_integration.py  test_agent_task.py  test_agent_task_export.py  test_agent_task_pipeline.py  test_analysis_injection.py  test_architect_tool_updates.py  test_architect_tools.py  test_artifact_contracts.py  test_artifact_harness.py  test_backpressure.py  test_backpressure_trend.py  test_cli_ab_test.py  test_cli_preset.py  test_coach_competitor_hints.py  test_code_strategies.py  test_code_strategies_e2e.py  test_config_adaptive.py  test_context_budget.py  test_context_preparation.py  test_cross_run_inheritance.py  test_curator.py  test_curator_integration.py  test_designer_calibration.py  test_dimension_pinning.py  test_dimension_threshold.py  test_distill_jobs.py  test_ecosystem_integration.py  test_ecosystem_runner.py  test_elo.py  test_enumerate_legal_actions.py  test_failure_recovery_lessons.py  test_generation_pipeline.py  test_generation_stages.py  test_harness_coverage.py  test_harness_loader.py  test_harness_mode.py  test_harness_model_demotion.py  test_harness_quality.py  (+75 more)
mts/tests/test_harness/: test_harness_adapt_applicator.py  test_harness_heartbeat_types.py  test_harness_identity_evolution.py  (+4 more)
(+273 files in other folders)
